Text now aligns correctly. I also added in the conversion function to get a readable string from the event date in the previous commit.

--- a/src/style.css
+++ b/src/style.css
@@ -45,6 +45,10 @@ body {
   float: right;
 }
 
+.top-align {
+  
+}
+
 @media screen and (min-width: 500px) {
     #adv-search {
         width: 500px;
